web-infras/parser/tests/fixtures/self-added/decorators/error-decorator-not-in-class/output.txt
[SyntaxError]: Leading decorators must be attached to a class declaration. (1,1)
1|@de
 |^
